--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,16 +5,16 @@
     "version": "0.2.0",
     "configurations": [
         {
+            "type": "node",
             "name": "Launch Program",
-            "program": "${workspaceFolder}/build/src/index.js",
-            "request": "launch",
             "skipFiles": [
                 "<node_internals>/**"
             ],
-            "type": "node",
+            "program": "${workspaceFolder}/src/entry/updateCompanies.ts",
             "preLaunchTask": "tsc: 建置 - tsconfig.json",
-            "args": ["--date=20110101","--stockNo=0050"]
-            
+            "outFiles": [
+                "${workspaceFolder}/build/**/*.js"
+            ]
         }
     ]
 }
