--- a/package.json
+++ b/package.json
@@ -15,16 +15,17 @@
     "clean": "gts clean",
     "compile": "tsc",
     "fix": "gts fix",
-    "prepare": "npm.cmd run compile",
-    "pretest": "npm.cmd run compile",
-    "posttest": "npm.cmd run lint"
+    "prod": "tsc && node build/src/entry/updateDailyStats.js"
   },
   "devDependencies": {
+    "@types/html2json": "^1.0.1",
     "@types/node": "^14.11.2",
     "gts": "^3.1.0",
     "typescript": "^4.0.3"
   },
   "dependencies": {
-    "axios": "^0.27.2"
+    "axios": "^0.27.2",
+    "html2json": "^1.0.2",
+    "mariadb": "^3.0.1"
   }
 }
