三大功能： 每日更新公司資料 每日更新盤後總表 每日更新個股歷史資料

--- a/package.json
+++ b/package.json
@@ -10,12 +10,9 @@
   "license": "Apache-2.0",
   "keywords": [],
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "lint": "gts lint",
-    "clean": "gts clean",
-    "compile": "tsc",
-    "fix": "gts fix",
-    "prod": "tsc && node build/src/entry/updateDailyStats.js"
+    "dailystats": "tsc && node build/src/entry/updateDailyStats.js",
+    "companyinfo": "tsc && node build/src/entry/updateCompanies.js",
+    "history": "tsc && node build/src/entry/updateStockHistory.js"
   },
   "devDependencies": {
     "@types/html2json": "^1.0.1",
