Hotfix: 修正yml指令問題，新增timeout屬性。

--- a/.github/workflows/DailyStats.yml
+++ b/.github/workflows/DailyStats.yml
@@ -24,4 +24,4 @@ jobs:
       - name: Install Packages
         run: test -d node_modules && echo "node_modules exists" || npm ci
  
-      - run: npm run prod
+      - run: npm run dailystats
