--- a/.github/workflows/updateHistory.yml
+++ b/.github/workflows/updateHistory.yml
@@ -5,7 +5,7 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-  
+    timeout-minutes: 4200
     strategy:
         matrix:
           node-version: [16.13.1]  
