--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "typescript": "^4.0.3"
   },
   "dependencies": {
+    "@apollo/client": "^3.7.7",
     "axios": "^1.1.3",
     "html2json": "^1.0.2",
     "mariadb": "^3.0.2"
