--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,17 +4,25 @@
     // 如需詳細資訊，請瀏覽: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
+        // {
+        //     "type": "node",
+        //     "name": "Launch Program",
+        //     "skipFiles": [
+        //         "<node_internals>/**"
+        //     ],
+        //     "program": "${workspaceFolder}/src/entry/fillStockHistory.ts",
+        //     "preLaunchTask": "tsc: 建置 - tsconfig.json",
+        //     "outFiles": [
+        //         "${workspaceFolder}/build/**/*.js"
+        //     ]
+        // },
         {
+            "name": "Launch with nodemon",
             "type": "node",
-            "name": "Launch Program",
-            "skipFiles": [
-                "<node_internals>/**"
-            ],
-            "program": "${workspaceFolder}/src/entry/fillStockHistory.ts",
-            "preLaunchTask": "tsc: 建置 - tsconfig.json",
-            "outFiles": [
-                "${workspaceFolder}/build/**/*.js"
-            ]
+            "request": "launch",
+            "program": "${workspaceRoot}/node_modules/nodemon/bin/nodemon.js",
+            "args": ["${workspaceRoot}/app.js"],
+            "runtimeArgs": ["--nolazy"]
         }
     ]
 }
