--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,25 +4,22 @@
     // 如需詳細資訊，請瀏覽: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
+{
+    "name": "Launch Program",
+    "program": "${workspaceFolder}/src/index.js",
+    "request": "launch",
+    "skipFiles": [
+        "<node_internals>/**"
+    ],
+    "type": "node"
+}
         // {
+        //     "name": "Launch with nodemon",
         //     "type": "node",
-        //     "name": "Launch Program",
-        //     "skipFiles": [
-        //         "<node_internals>/**"
-        //     ],
-        //     "program": "${workspaceFolder}/src/entry/fillStockHistory.ts",
-        //     "preLaunchTask": "tsc: 建置 - tsconfig.json",
-        //     "outFiles": [
-        //         "${workspaceFolder}/build/**/*.js"
-        //     ]
-        // },
-        {
-            "name": "Launch with nodemon",
-            "type": "node",
-            "request": "launch",
-            "program": "${workspaceRoot}/node_modules/nodemon/bin/nodemon.js",
-            "args": ["${workspaceRoot}/app.js"],
-            "runtimeArgs": ["--nolazy"]
-        }
+        //     "request": "launch",
+        //     "program": "${workspaceRoot}/node_modules/nodemon/bin/nodemon.js",
+        //     "args": ["${workspaceRoot}/index.js"],
+        //     "runtimeArgs": ["--nolazy"]
+        // }
     ]
 }
