--- a/package.json
+++ b/package.json
@@ -2,29 +2,25 @@
   "name": "stock_agent",
   "version": "0.0.0",
   "description": "",
-  "main": "build/src/index.js",
-  "types": "build/src/index.d.ts",
+  "main": "src/index.js",
+  "type": "module",
   "files": [
-    "build/src"
+    "src"
   ],
   "license": "Apache-2.0",
   "keywords": [],
   "scripts": {
-    "dailystats": "tsc && node build/src/entry/updateDailyStats.js",
-    "companyinfo": "tsc && node build/src/entry/updateCompanies.js",
-    "history": "tsc && node build/src/entry/updateStockHistory.js"
-  },
-  "devDependencies": {
-    "@types/html2json": "^1.0.1",
-    "@types/node": "^14.11.2",
-    "gts": "^3.1.0",
-    "typescript": "^4.0.3"
+    "dailystats": "node src/entry/updateDailyStats.js",
+    "companyinfo": "node src/entry/updateCompanies.js",
+    "history": "node src/entry/updateStockHistory.js"
   },
   "dependencies": {
-    "@apollo/client": "^3.7.7",
     "axios": "^1.1.3",
     "html2json": "^1.0.2",
     "mariadb": "^3.0.2",
     "nodeman": "^1.1.2"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.1"
   }
 }
