--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,15 +4,15 @@
     // 如需詳細資訊，請瀏覽: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
-{
-    "name": "Launch Program",
-    "program": "${workspaceFolder}/src/entry/daily.index.js",
-    "request": "launch",
-    "skipFiles": [
-        "<node_internals>/**"
-    ],
-    "type": "node"
-}
+        {
+            "name": "Launch Program",
+            "program": "${workspaceFolder}/src/entry/sandbox.index.js",
+            "request": "launch",
+            "skipFiles": [
+                "<node_internals>/**"
+            ],
+            "type": "node"
+        }
         // {
         //     "name": "Launch with nodemon",
         //     "type": "node",
