--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,7 +6,7 @@
     "configurations": [
         {
             "name": "Launch Program",
-            "program": "${workspaceFolder}/src/entry/yields.index.js",
+            "program": "${workspaceFolder}/src/entry/valuezone.index.js",
             "request": "launch",
             "skipFiles": [
                 "<node_internals>/**"
